# qdrant-quantization-benchmark

./: .env.example  .gitignore  LICENSE  LOGGING_TESTING_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_TESTING.md  TESTING_INSTRUCTIONS.md  main.py  pyproject.toml
examples/: generate_data_and_queries.py
src/qdrant_quantization_benchmark/: __init__.py  benchmarking.py  cli.py  config.py  data_generator.py  embeddings.py  logging.py  qdrant_manager.py  query_generator.py  uploader.py  visualization.py
tests/: README.md  __init__.py  conftest.py  test_benchmarking.py  test_cli.py  test_config.py  test_data_generator.py  test_embeddings.py  test_logging.py  test_qdrant_manager.py  test_query_generator.py  test_uploader.py  test_visualization.py
