[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qdrant-quantization-benchmark"
version = "0.2.0"
description = "Comprehensive benchmarking suite for Qdrant vector quantization methods"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rodney D. Tigges", email = "AssimilateReality@gmail.com"}
]
keywords = ["qdrant", "vector-database", "quantization", "benchmark", "ml", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "structlog>=23.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.2.0",
    "black>=23.7.0",
    "ruff>=0.0.282",
    "mypy>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/assimilatereality/qdrant-quantization-benchmark"
Repository = "https://github.com/assimilatereality/qdrant-quantization-benchmark"
Documentation = "https://github.com/assimilatereality/qdrant-quantization-benchmark#readme"
"Bug Tracker" = "https://github.com/assimilatereality/qdrant-quantization-benchmark/issues"

[project.scripts]
qdrant-benchmark = "qdrant_quantization_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src/qdrant_quantization_benchmark --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false